# Startup-SBOM

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.agent  Dockerfile.server  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
Docs/: CVE Analysis.md  Chroot Analysis.md  Introduction.md  RPM and DPKG data access.md  Static Analysis.md
agent/: agent.py  config.yaml
analyzer/: chroot_analyzer.py  static_analyzer.py
analyzers/: __init__.py
analyzers/apt/: __init__.py  chroot_analyzer.py  output_formats.py  static_analyzer.py
analyzers/apt_package_manager/: chroot_analyzer.py  static_analyzer.py
analyzers/output_formats/: apt_outputs.py  time_plot.py
analyzers/output_formatting/: apt_outputs.py  cdx.py  pacman_outputs.py  rpm_outputs.py  time_plot.py
analyzers/package_utils/: apt_utils.py  cve_analyzer.py  pacman_utils.py  rpm_utils.py
analyzers/pacman/: placeholder.py
analyzers/pacman_package_manager/: pacman_chroot_analyzer.py  pacman_static_analyzer.py  placeholder.py
analyzers/rpm/: rpm_chroot_analyzer.py  rpm_static_analyzer.py
analyzers/rpm_package_manager/: rpm_chroot_analyzer.py  rpm_static_analyzer.py
arch-redesign-plans/: Architecture_Comparison.md  COMPLETE_IMPLEMENTATION_PLAN.md  SBOM_Simplified_Architecture.md  SIMPLIFIED_QUICKSTART.md
config/: agent.conf  sbom.conf  server.conf
data/: sbom.db
database/: sbom.db  schema.sql
server/: config.py  database.py  main.py
tests/: conftest.py  test_agent.py  test_cli.py  test_core.py  test_server.py
web/: app.js  index.html  style.css
(+33 files in other folders)
